--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<module>easy-core</module>
 		<module>easy-test</module>
 		<module>easy-netty</module>
+		<module>easy-test-start</module>
 	</modules>
 
 	<dependencyManagement>
