--- a/easy-aop/pom.xml
+++ b/easy-aop/pom.xml
@@ -3,7 +3,14 @@
   <parent>
     <groupId>com.yuyenews</groupId>
     <artifactId>easy-framework</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
   </parent>
   <artifactId>easy-aop</artifactId>
+  
+  <dependencies>
+  	<dependency>
+  		<groupId>com.yuyenews</groupId>
+  		<artifactId>easy-core</artifactId>
+  	</dependency>
+  </dependencies>
 </project>
