--- a/easy-netty/pom.xml
+++ b/easy-netty/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>com.yuyenews</groupId>
 		<artifactId>easy-framework</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
+		<version>0.0.1</version>
 	</parent>
 	<artifactId>easy-netty</artifactId>
 
