--- a/easy-core/pom.xml
+++ b/easy-core/pom.xml
@@ -13,5 +13,10 @@
 			<groupId>org.dom4j</groupId>
 			<artifactId>dom4j</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.yuyenews</groupId>
+			<artifactId>easy-netty</artifactId>
+		</dependency>
 	</dependencies>
 </project>
