第一次完整提交，功能正题告一段落，还剩下几个需要微调的地方

--- a/easy-aop/pom.xml
+++ b/easy-aop/pom.xml
@@ -12,5 +12,14 @@
   		<groupId>com.yuyenews</groupId>
   		<artifactId>easy-core</artifactId>
   	</dependency>
+  	
+  	<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+		</dependency>
   </dependencies>
 </project>
