--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,13 @@
 				<artifactId>easy-server</artifactId>
 				<version>0.0.1</version>
 			</dependency>
+			
+			<!-- mybatis 整合包 -->
+			<dependency>
+				<groupId>com.yuyenews.easy-mybatis</groupId>
+				<artifactId>easy-mybatis</artifactId>
+				<version>0.0.1</version>
+			</dependency>
 
 			<dependency>
 				<groupId>io.netty</groupId>
