--- a/easy-core/pom.xml
+++ b/easy-core/pom.xml
@@ -13,10 +13,10 @@
 			<groupId>com.yuyenews</groupId>
 			<artifactId>easy-server</artifactId>
 		</dependency>
-		<!-- mybatis 整合包 -->
-		<dependency>
+		<!-- mybatis 整合包 此包正在开发中 -->
+		<!-- <dependency>
 			<groupId>com.yuyenews.easy-mybatis</groupId>
 			<artifactId>easy-mybatis</artifactId>
-		</dependency>
+		</dependency> -->
 	</dependencies>
 </project>
