--- a/esay-mvc/pom.xml
+++ b/esay-mvc/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.yuyenews</groupId>
+		<groupId>com.github.yuye</groupId>
 		<artifactId>easy-framework</artifactId>
 		<version>0.0.1</version>
 	</parent>
@@ -10,11 +10,11 @@
 
 	<dependencies>
 	  	<dependency>
-	  		<groupId>com.yuyenews</groupId>
+	  		<groupId>com.github.yuye</groupId>
 	  		<artifactId>easy-ioc</artifactId>
 	  	</dependency>
 	  	<dependency>
-	  		<groupId>com.yuyenews</groupId>
+	  		<groupId>com.github.yuye</groupId>
 	  		<artifactId>easy-netty</artifactId>
 	  	</dependency>
 	</dependencies>
