:art:0.0.1版本已经完结

--- a/easy-core/pom.xml
+++ b/easy-core/pom.xml
@@ -2,20 +2,20 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.github.yuye</groupId>
+		<groupId>com.github.serlockholmes</groupId>
 		<artifactId>easy-framework</artifactId>
-		<version>0.0.1</version>
+		<version>0.1</version>
 	</parent>
 	<artifactId>easy-core</artifactId>
 
 	<dependencies>
 		<dependency>
-			<groupId>com.github.yuye</groupId>
+			<groupId>com.github.serlockholmes</groupId>
 			<artifactId>easy-server</artifactId>
 		</dependency>
 		<!-- mybatis 整合包 此包正在开发中 -->
 		<!-- <dependency>
-			<groupId>com.yuyenews.easy-mybatis</groupId>
+			<groupId>com.github.serlockholmes.easy-mybatis</groupId>
 			<artifactId>easy-mybatis</artifactId>
 		</dependency> -->
 	</dependencies>
