--- a/easy-core/pom.xml
+++ b/easy-core/pom.xml
@@ -14,9 +14,9 @@
 			<artifactId>easy-server</artifactId>
 		</dependency>
 		<!-- mybatis 整合包 此包正在开发中 -->
-		<!-- <dependency>
-			<groupId>com.github.serlockholmes.easy-mybatis</groupId>
+		<dependency>
+			<groupId>com.github.easy-mybatis</groupId>
 			<artifactId>easy-mybatis</artifactId>
-		</dependency> -->
+		</dependency>
 	</dependencies>
 </project>
