--- a/pom.xml
+++ b/pom.xml
@@ -48,11 +48,11 @@
 			</dependency>
 			
 			<!-- mybatis 整合包 -->
-			<!-- <dependency>
-				<groupId>com.github.serlockholmes.easy-mybatis</groupId>
+			<dependency>
+				<groupId>com.github.easy-mybatis</groupId>
 				<artifactId>easy-mybatis</artifactId>
 				<version>0.1</version>
-			</dependency> -->
+			</dependency>
 
 			<dependency>
 				<groupId>io.netty</groupId>
