--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.serlockholmes</groupId>
 	<artifactId>easy-framework</artifactId>
-	<version>0.1</version>
+	<version>0.1.0</version>
 	<packaging>pom</packaging>
 	<modules>
 		<module>easy-ioc</module>
@@ -11,6 +11,7 @@
 		<module>easy-netty</module>
 		<module>easy-server</module>
 		<module>easy-mvc</module>
+		<module>easy-start</module>
 	</modules>
 
 	<dependencyManagement>
@@ -18,33 +19,33 @@
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-aop</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-ioc</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-mvc</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-core</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-netty</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 			
 			<dependency>
 				<groupId>com.github.serlockholmes</groupId>
 				<artifactId>easy-server</artifactId>
-				<version>0.1</version>
+				<version>0.1.0</version>
 			</dependency>
 
 			<dependency>
